<resources>
    <string name="app_name">TrackMyOrder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <string-array name="users">
        <item>Select a user</item>
        <item>customer</item>
        <item>employee</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="title_activity_employee_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="create_order">create order</string>
    <string name="ok">ok</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="all_orders">All Orders</string>
    <string name="order_history">Order History</string>
    <string name="current_orders">Current Orders</string>
    <string name="customer">customer</string>
    <string name="next">next</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="employee_email">Employee email</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="surname">Surname</string>
    <string name="first_name">First name</string>
    <string name="order_number">Order number</string>
    <string name="restaurant">Restaurant</string>
    <string name="employee_name">Employee name</string>
    <string name="time">Time</string>
    <string name="update">UPDATE</string>
    <string name="add">add</string>
    <string name="_79">79%</string>
    <string name="_47">47</string>
    <string name="_183">183</string>
    <string name="name">Name</string>
    <string name="trackmyorder">TrackMyOrder</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="todo">TODO</string>
    <string name="account">Account</string>
    <string name="employee">employee</string>
    <string name="select_user">select user:</string>
</resources>
