<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/lightBlue"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/TextViewOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/order_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/TextViewCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/customer_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/TextViewOrderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/time"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/TextViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/status"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginLeft="5dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateBtn"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/black"
                    android:onClick="user_button_click"
                    android:text="@string/update"
                    android:textColor="@color/lightBlue"
                    app:cornerRadius="15dp" />

            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>