<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/orange_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/TextViewOrderNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_number"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/TextViewRestaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

            </LinearLayout>

            <TextView
                android:id="@+id/TextViewEmployeeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/employee_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
            android:id="@+id/TextViewOrderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/time"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/thumbsUp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_thumb_up"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/thumbsDown"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_thumb_down"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>