<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_theme"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.example.newproject2020.employee.EmployeeRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/registration_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="emp_reg_back_btn_click"
            android:padding="5dp"
            android:src="@drawable/ic_back_button_black"
            android:transitionName="transition_registration_back_button" />

        <TextView
            android:id="@+id/register_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:padding="20dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/RegistrationFirstNameInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_edit_black"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/FirstNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/RegistrationLastNameInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/surname"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_edit_black"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LastNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RestaurantInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_name"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_profile_white"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/restaurantEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_email"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_profile_white"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/empEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrationPasswordInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:startIconDrawable="@drawable/ic_password_white"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:startIconDrawable="@drawable/ic_password_white"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:onClick="callRegisterNextScreen"
                android:text="@string/next"
                android:textColor="@color/blue_theme"
                android:transitionName="transition_register_next_button"
                app:cornerRadius="19dp" />

            <TextView
                android:id="@+id/empRegTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>