<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_theme"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.example.newproject2020.CustomerLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:padding="5dp"
            android:src="@drawable/ic_back_button_black"
            android:transitionName="transition_registration_back_button" />

        <TextView
            android:id="@+id/login_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/muli_bold"
            android:padding="20dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="40sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsernameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="Enter email"
            android:textColorHint="#000000"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_profile_white"
            app:startIconTint="#000000"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationPasswordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorHint="#000000"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#000000"
            app:startIconDrawable="@drawable/ic_password_white"
            app:startIconTint="#000000"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/mTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            style=""
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:onClick="nextOnClick"
            android:text="@string/next"
            android:textColor="@color/orange_theme"
            app:backgroundTint="@color/black"
            app:cornerRadius="19dp"
            app:elevation="0dp" />

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:onClick="registerOnClick"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>



